Fix T100606: Apply object transform fails with delta quaternion rotation

Apply transform failed to clear delta quaternion & axis-angle rotation.